--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,5 +87,14 @@ img {
     width:  180px;
 }
 
+.userTotal {
+    background: black;
+    color: aqua;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    width:  180px;
+}
+
 
 
